<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chetan.appone.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_1_main_acitivity"
        android:id="@+id/textView"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_activity1_app1"
        android:id="@+id/button"
        android:onClick="openActivityOneAppOne"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:drawableBottom="@mipmap/c"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCamera"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:text="@string/camera"
        android:onClick="openCamera"
        android:drawableLeft="@mipmap/c"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivOwner"
        android:contentDescription="@string/owned"
        android:layout_above="@+id/btnCamera"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:src="@mipmap/c"
        android:onClick="toA2" />
</RelativeLayout>
