<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.chetan.appone.ActivityOneAppOne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:id="@+id/a2SeekBAr" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/a2Btn"
            android:text="@string/submit"
            android:onClick="submit" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/a2tv"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/a2CountryACTV"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nationality"
           />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_intent"
            android:id="@+id/a2BrdCastItbtn"
            android:layout_gravity="center_horizontal"
            android:onClick="broadcastintent" />

        <VideoView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/videoView"
            android:layout_gravity="center_horizontal"
            android:soundEffectsEnabled="true"
            />

    </LinearLayout>

</ScrollView>